--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               server that has been dedicated for 6 years led by qualified staff
               who are here to help players.
               <br /><br />
-              Minecraft 1.13.2 - 1.15.2: play.azalelnation.com
+              Minecraft Java Edition 1.13.2 - 1.15.2: play.azalelnation.com
             </p>
           </div>
           <div class="modal-footer white-text">
@@ -146,7 +146,7 @@
           </div>
           <div class="modal-body white-text">
             <img
-              src="https://dwii.me/css/zeal.webp"
+              src="https://api.zealcord.xyz/assets/images/Zealcord.gif"
               width="128px"
               alt=""
               class="rounded mx-auto d-block"
