--- a/projects/index.html
+++ b/projects/index.html
@@ -146,7 +146,7 @@
           </div>
           <div class="modal-body white-text">
             <img
-              src="https://api.zealcord.xyz/assets/images/Zealcord.gif"
+              src="https://api.zealcord.xyz/assets/images/logo.png"
               width="128px"
               alt=""
               class="rounded mx-auto d-block"
@@ -319,7 +319,7 @@
                 <div class="card bg-dark">
                   <div class="card-body">
                     <img
-                      src="https://api.zealcord.xyz/assets/images/Zealcord.gif"
+                      src="https://api.zealcord.xyz/assets/images/logo.png"
                       width="64px"
                       alt=""
                       class="rounded mx-auto d-block float-right"
