--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </div>
           <div class="modal-body white-text">
             <img
-              src="https://api.zealcord.xyz/assets/images/Zealcord.gif"
+              src="https://api.zealcord.xyz/assets/images/logo.png"
               width="128px"
               alt=""
               class="rounded mx-auto d-block"
