--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en" class="full-height">
   <head>
@@ -30,6 +31,9 @@
       rel="stylesheet"
       href="https://assets.azalelnation.com/font-awesome/css/all.min.css"
     />
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    
     <link
       rel="stylesheet"
       href="https://assets.azalelnation.com/bootstrap-material-design/css/bootstrap.min.css"
@@ -206,6 +210,11 @@
                   data-toggle="modal"
                   data-target="#azalelNA"
                   ><i class="fas fa-chevron-right"></i> AzalelNation</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="https://corona.dwii.me/" class="nav-link"
+                  ><i class="fas fa-chevron-right"></i> COVID-19</a
                 >
               </li>
               <li class="nav-item">
