--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       href="https://assets.azalelnation.com/bootstrap-material-design/css/mdb.min.css"
     />
 
-    <link rel="stylesheet" href="https://dwii.me/css/dwii.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <script
       type="text/javascript"
