--- a/projects/index.html
+++ b/projects/index.html
@@ -30,6 +30,7 @@
       rel="stylesheet"
       href="https://assets.azalelnation.com/font-awesome/css/all.min.css"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <link
       rel="stylesheet"
       href="https://assets.azalelnation.com/bootstrap-material-design/css/bootstrap.min.css"
