--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
                 <div class="card bg-dark">
                   <div class="card-body">
                     <img
-                      src="https://cdn.discordapp.com/icons/543594723177136158/30f0eba0df5ad17036b4c8b1cfa2ad51.webp"
+                      src="https://mizudev.tect/mizulogo.jpg"
                       width="64px"
                       alt=""
                       class="rounded mx-auto d-block float-right"
                     />
-                    <h5 class="card-title">Discord Bots Store</h5>
+                    <h5 class="card-title">Mizu Development</h5>
                     <p class="card-text">
-                      Need a discord bot? or a website template? we can make it for your, at cheap price.
+                      A Japanese themed development Discord server that focused to programming topic.
                     </p>
                   </div>
                   <div class="card-footer text-right">
-                    <a target="_blank" href="https://store.dwii.me/"
+                    <a target="_blank" href="https://mizudev.tech/"
                       ><i class="fas fa-external-link-alt fa-lg white-text"></i
                     ></a>
                   </div>
@@ -123,7 +123,7 @@
                     </p>
                   </div>
                   <div class="card-footer text-right">
-                    <a target="_blank" href="https://zealcord.xyz/"
+                    <a target="_blank" href="https://zilcrod.glitch.me/"
                       ><i class="fas fa-external-link-alt fa-lg white-text"></i
                     ></a>
                   </div>
@@ -322,7 +322,7 @@
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/js/mdb.min.js"></script>
 
-<script type="text/javascript" src="assets/js/home.js"></script>
+    <script type="text/javascript" src="assets/js/home.js"></script>
     
   </body>
 </html>
