--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
   
   </head>
   <body>
+      
+  <div class="btt">
+      <a class="btn elegant-color-dark text-white waves-efect font-weight-bold waves-effect waves-light" href="/#top"><i class="fas fa-arrow-up fa-2x"></i></a>
+  </div>
     
 <div class="parallax">
   
