--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a class="btn elegant-color-dark text-white waves-efect font-weight-bold waves-effect waves-light" href="/#top"><i class="fas fa-arrow-up fa-2x"></i></a>
   </div>
     
-<div class="parallax">
+<div class="parallax" id="top">
   
   <div class="flex-center">
   <div class="animated zoomIn">
