--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="card bg-dark">
                   <div class="card-body">
                     <img
-                      src="https://mizudev.tect/mizulogo.jpg"
+                      src="https://mizudev.tech/mizulogo.jpg"
                       width="64px"
                       alt=""
                       class="rounded mx-auto d-block float-right"
