--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     
     <div class="row d-flex justify-content-center my-4" role="group">
       <a href="https://github.com/ItzMeDwii/" class="btn text-white waves-efect font-weight-bolder">My Github</a>
-      <a href="#here" class="go btn waves-efect text-white font-weight-bolder">More About Me</a>
-      <a href="mailto:dwii5359@azalelnation.com" class="btn text-white waves-efect font-weight-bolder">Contact Me</a>
+      <a href="#here" class="go btn waves-efect text-white font-weight-bolder">My Projects</a>
+      <a href="#contact" class="btn text-white waves-efect font-weight-bolder">Contact Me</a>
     </div>
     </div>
   </div>
