--- a/index.html
+++ b/index.html
@@ -299,9 +299,16 @@
   <div class="flex-center">
      <div class="container my-5"> 
        <div class="jumbotron">
-         <h2 class="text-center text-white font-weight-bold">My Social Media</h2>
+         <h2 class="text-center text-white font-weight-bold">Contact Me!</h2>
          <br>
-         <p class="text-center text-white font-weight-bold">...</p>
+         <div class="row d-flex justify-content-center my-5" role="group" "="">
+          <a href="https://github.com/ItzMeDwii" target="_blank" class="buton text-white waves-efect font-weight-bolder mr-4" style="font-size: 3rem;"><i class="fab fa-github"></i></a>
+          <a href="https://fb.com/dwii5359" target="_blank" class="buton text-white waves-efect font-weight-bolder mx-4" style="font-size: 3rem;"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/dwii5359" target="_blank" class="buton text-white waves-efect font-weight-bolder mx-4" style="font-size: 3rem;"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.reddit.com/u/Dwii5359" target="_blank" class="buton waves-efect text-white font-weight-bolder mx-4" style="font-size: 3rem;"><i class="fab fa-reddit"></i></a>
+          <a href="https://mizudev.tech/" target="_blank" class="buton text-white waves-efect font-weight-bolder mx-4" style="font-size: 3rem;"><i class="fab fa-discord"></i></a>
+          <a href="https://steamcommunity.com/id/dwii5359/" target="_blank" class="buton text-white waves-efect font-weight-bolder ml-4" style="font-size: 3rem;"><i class="fab fa-steam"></i></a>
+      </div>
        </div>
     </div>
   </div>
