--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="card bg-dark">
                   <div class="card-body">
                     <img
-                      src="https://mizudev.tech/mizulogo.jpg"
+                      src="https://mizudev.net/mizulogo.jpg"
                       width="64px"
                       alt=""
                       class="rounded mx-auto d-block float-right"
@@ -104,7 +104,7 @@
                     </p>
                   </div>
                   <div class="card-footer text-right">
-                    <a target="_blank" href="https://mizudev.tech/"
+                    <a target="_blank" href="https://mizudev.net/"
                       ><i class="fas fa-external-link-alt fa-lg white-text"></i
                     ></a>
                   </div>
